# TxChange

./: .gitignore  .replit  README.md  pyproject.toml  run.py
TxChange/: __init__.py  forms.py  models.py  routes.py  site.db
TxChange/static/: java.js  stye.css
TxChange/templates/: about.html  create_ticket.html  discover.html  home.html  interested.html  layout.html  login.html  new_ticket.html  profile.html  register.html  test.html  ticket.html
