[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Zach Lopez <zachlopez9@gmail.com>"]
description = ""
name = "txchange-2"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-bcrypt = "^0.7.1"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.14.3"
python = "^3.7"
wtforms = "^2.2"
[tool.poetry.dev-dependencies]
